# code-collections

./: .gitignore  README.md  csv_stats.py  dbformatter.py  directorymaker.py  directorymaker_class.py  directorymaker_json.py  makedirectory.py  pyproject.toml  structureexample.md  structureexample.txt
examples/: example.py  structureexample2.txt
src/codecollections/: __init__.py  cli.py  directorymaker_argparse.py  directorymaker_class.py  directorymaker_json.py
