[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codecollections"
version = "0.0.1"
description = "A collections of tools for data management"
authors = [
  { name = "meganasampson", email = "megan.sampson@ukaea.uk" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU LGPL",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.2",
  "typer>=0.16.0",
]

[project.scripts]
datahelper = "codecollections.cli:app"

[project.urls]
"Repository" = "https://github.com/meganasampson/code-collections"
"Issue Tracker" = "https://github.com/meganasampson/code-collections/issues"

[tool.setuptools.packages.find]
where = ["src"]